fix shadow z-index

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ canvas {
     width: 100%;
     height: 900vh;
     pointer-events: none;
-    z-index: 1;
+    z-index: 4;
 }
 
 .shadow-overlay.top {
